--- a/Exam Assignments/paper/paper.tex
+++ b/Exam Assignments/paper/paper.tex
@@ -5,6 +5,8 @@
 \usepackage{listings}
 \usepackage{etoolbox}
 
+% \widowpenalty=10000  % Prevents widows (single lines at the top of a page)
+% \clubpenalty=10000   % Prevents orphans (single lines at the bottom of a page)
 
 \lstset{
     breaklines=true       % Enable line breaking
@@ -74,14 +76,14 @@
 % The five-finger pattern \cite{macgilchrist2014}:
 \begin{enumerate}
 % \item \textbf{Topic and background:} What topic does the paper deal with? What is the point of departure for your research? Why are you studying this now?
-\item \textbf{Topic and background:} This paper concerns tensor operations, specifically those implemented in the Python library numpy with its \texttt{numpy.einsum} method. Tensor operations are very common in todays data driven world, especially with the rise of \em Deep Learning\em . Hence, we should ensure that those important methods are implemented efficiently, as \em time \em and \em space complexity \em are a big concern when operating on increasingly bigger data. 
+\item \textbf{Topic and background:} This paper concerns tensor operations, specifically those implemented in the Python library NumPy with its \texttt{numpy.einsum} method. Tensor operations are very common in todays data driven world, especially with the rise of \em Deep Learning\em . Hence, we should ensure that those important methods are implemented efficiently, as \em time \em and \em space complexity \em are a big concern when operating on increasingly bigger data. 
 
 % \item \textbf{Focus:} What is your research question? What are you studying precisely?
 \item \textbf{Focus:} The einsum operation implements three fundamental tensor operations: \em Transposition\em , \em Reduction \em and \em Contraction\em . This paper tests all of these operations, as well as their combinations, and compares it to a hardcoded implementation written in C++.
-\item \textbf{Method:} To this end, I implemented a bare einsum implementation which implements these three operatios in C++, where one external library for transposing tensors is employed. Then, both implementations are compared, and the findings are presented in this paper.
-\item \textbf{Key findings:} The library einsum implementation does a really good job at transposing tensors. However, when contraction and especially reduction take up much of the workload, numpy's einsum implementation is remarkably ineffecient, as my C++ implementation executes faster by magnitudes.
+\item \textbf{Method:} To this end, I implemented a bare einsum implementation which implements these three operations in C++, where one external library for transposing tensors is employed. Then, both implementations are compared, and the findings are presented in this paper.
+\item \textbf{Key findings:} The library einsum implementation does a really good job at transposing tensors. However, when contraction and especially reduction take up much of the workload, NumPy's einsum implementation is remarkably inefficient, as my C++ implementation executes faster by magnitudes.
 % \item \textbf{Conclusions or implications:} What do these findings mean? What broader issues do they speak to?
-\item \textbf{Conclusions or implications:} These findings emphasize that we cannot trust every implementation of a library to be implemented efficiently, even when speaking of popular libraries like numpy. In this specfic case of einsum, I advise the reader not to use it for big data operations which rely heavily on contraction or reduction.
+\item \textbf{Conclusions or implications:} These findings emphasize that we cannot trust every implementation of a library to be implemented efficiently, even when speaking of popular libraries like NumPy. In this specific case of einsum, I advise the reader not to use it for big data operations which rely heavily on contraction or reduction.
 \end{enumerate}
 
 
@@ -99,7 +101,7 @@
 %% information and builds the first part of the formatted document.
 \maketitle
 
-\let\thefootnote\relax\footnotetext{AEPRO 2025, March 1, Jena, Germany. Copyright \copyright 2025 for this paper by its authors. Use permitted under Creative Commons License Attribution 4.0 International (CC BY 4.0).}
+% \let\thefootnote\relax\footnotetext{AEPRO 2025, March 1, Jena, Germany. Copyright \copyright 2025 for this paper by its authors. Use permitted under Creative Commons License Attribution 4.0 International (CC BY 4.0).}
 
 
 \section{Introduction}
@@ -112,7 +114,7 @@ The topic of this paper is tensor transformations, and how to perform them effic
 \end{pmatrix} \quad . \]
 
 \noindent
-In order to not always hardcode these operations, \em einsum \em can be employed by passing in the two operand tensors, together with a format string, which defines how every dimension will be treated. For example \texttt{ik,kj->ij} specifies a normal matrix-matrix-multiplication. Here is how these \em column identifiers \em of \texttt{lhs\_string} in the eisnum expression \texttt{<lhs\_string>,<rhs\_string>-><target\_string>} are interpreted:
+In order to not always hardcode these operations, \em einsum \em can be employed by passing in the two operand tensors, together with a format string, which defines how every dimension will be treated. For example \texttt{ik,kj->ij} specifies a normal matrix-matrix-multiplication. Here is how these \em column identifiers \em of \texttt{lhs\_string} in the einsum expression \texttt{<lhs\_string>,<rhs\_string>-><target\_string>} are interpreted:
 
 \begin{table}[h!]
   \centering
@@ -138,7 +140,7 @@ A similar table can be produced for column identifiers in \texttt{rhs\_string}. 
 In order to implement einsum, it is necessary to transpose tensors. To this end, I used {this external C++ library}~\cite{hptt2017}.
 
 \subsection{My Contributions}
-In order to have a complete einsum implementation, many steps are necessary, like parsing the input string, transposing and reshaping the operand tensors, reducing them, batch matrix multiply them, and reshape and retranspose the resulting matrix again. The details of all of these steps can be found in section \ref{sec:algorithm}. Implementing these individual operations, as well as orchestrating all of them, was part of this project.
+In order to have a complete einsum implementation, many steps are necessary, like parsing the input string, transposing and reshaping the operand tensors, reducing them, batch matrix multiply them, and reshape and transpose the resulting matrix again. The details of all of these steps can be found in section \ref{sec:algorithm}. Implementing these individual operations, as well as orchestrating all of them, was part of this project.
 
 \subsection{Outline}
 Next, I present the implemented algorithm in more detail, and explain the design choices (section \ref{sec:algorithm}). After that, we use this implementation to do tensor operations on NumPy arrays, and compare the running times with NumPy's einsum implementation (section \ref{sec:experiments}). To this end, we test different einsum calls, some with much emphasize on individual tensor operations like transposing, reducing or contracting, and other calls which require a combination of these operations.
@@ -172,11 +174,12 @@ In case the tuple passed all these checks, the function won't throw any error, a
 \subsection{Computing Einsum}
 \subsubsection{Categorizing Dimensions}
 We now investigate the orchestrating function \texttt{compute\_einsum} further.
-The first step is to categorize each dimension of the two input tensors into one of the four categories \em batch, kept left, contracted \em or \em summed left \em in case of the left hand side tensor, similarly for the right hand side. We do this by simply looping over all so called \em column identifiers \em specified by the format string (columnn identifiers are basically just the individual characters in the string) and checking if this identifier is also present in the \texttt{rhs\_string} and \texttt{target\_string}. Based on these checks we assign the categories, see table~\ref{tab:column_identifiers}. We do similarly for the right hand side. We store the indices in appropriate arrays, for example, all the dimension indices which are batch dimensions in the \texttt{lhs\_tensor} will be stored in \texttt{batch\_dims\_lhs}.
+The first step is to categorize each dimension of the two input tensors into one of the four categories \em batch, kept left, contracted \em or \em summed left \em in case of the left hand side tensor, similarly for the right hand side. We do this by simply looping over all so called \em column identifiers \em specified by the format string (column identifiers are basically just the individual characters in the string) and checking if this identifier is also present in the \texttt{rhs\_string} and \texttt{target\_string}. Based on these checks we assign the categories, see table~\ref{tab:column_identifiers}. We do similarly for the right hand side. We store the indices in appropriate arrays, for example, all the dimension indices which are batch dimensions in the \texttt{lhs\_tensor} will be stored in \texttt{batch\_dims\_lhs}.
 
 \subsubsection{Transposing and Reshaping Operand Tensors}
 Now that we have categorized all the dimensions, we bring both tensors into the canonical form
-\[ \text{lhs\_tensor}[\vec{b}, \vec{k_l}, \vec{c}, \vec{s_l}] \ , \ \text{rhs\_tensor}[\vec{b}, \vec{k_r}, \vec{c}, \vec{s_r}] \quad . \]
+% \[ \text{lhs\_tensor}[\vec{b}, \vec{k_l}, \vec{c}, \vec{s_l}] \ , \ \text{rhs\_tensor}[\vec{b}, \vec{k_r}, \vec{c}, \vec{s_r}] \quad . \]
+\[ \text{lhs\_tensor}[{b}, {k_l}, {c}, {s_l}] \ , \ \text{rhs\_tensor}[{b}, {k_r}, {c}, {s_r}] \quad . \]
 One very important detail is that the order of the \em batch \em and \em contracted \em dimensions after transposing have the same ordering in the operand tensors. To illustrate this, say we have the einsum expression \texttt{einsum("ab,ba->", lhs\_matrix, rhs\_matrix)}. Naively, there is no need to transpose both matrices, as both of them are in the canonical form (every dimension is a contraction dimension). However, the orderings of these contracted dimensions do not match, hence we do need to transpose a matrix, either the left or the right hand side.
 
 To this end, the algorithm reorders the indices-lists for the right hand side such that the resulting order of column identifiers matches the left hand side. For this purpose, we employ the function \texttt{column\_identifiers\_like}.
@@ -184,16 +187,17 @@ To this end, the algorithm reorders the indices-lists for the right hand side su
 Furthermore, it is worth mentioning that there are different ways to transpose tensors. One way is the "lazy" way, where we just alter meta attributes of the tensor, in particular we alter the \em strides\em , which specify by "how much" we have to multiply an index of a given dimension in order to get the physical index to access the element in the underlying data array. This lazy way of doing it is very fast, as there is no need to move large amount of data. However, there is one big problem: If a tensor has non-canonical strides, we cannot reshape it. This is very bad, because we actually do want to reshape the tensors afterwards. Hence, we need to use the other way of transposing tensors: In he "eager" approach we basically move the data such that it is aligned with the new ordering of the dimensions. This is obviously much more expensive time and space complexity wise, but there is at least one benefit: The data is well aligned for the next operation (after reshaping): The following reduction operation will benefit from a stride access pattern of 1.
 
 \subsubsection{Reducing Operand Tensors}
-Now that we have both operand tensors in the desired shape, we have a fix plan on how to operate on these tensors, which means the following precedure is identical to all possible inputs. Only the reshaping and transposing of the result matrix at the very end needs specific treatment.
+Now that we have both operand tensors in the desired shape, we have a fix plan on how to operate on these tensors, which means the following procedure is identical to all possible inputs. Only the reshaping and transposing of the result matrix at the very end needs specific treatment.
 
 We start by reducing the fourth dimension of both operand tensors. This is fairly efficient as we have efficient access patterns as described earlier. After that, the two tensors will have the following form
-\[ \text{lhs\_tensor}[\vec{b}, \vec{k_l}, \vec{c}] \ , \ \text{rhs\_tensor}[\vec{b}, \vec{k_r}, \vec{c}] \quad . \]
+% \[ \text{lhs\_tensor}[\vec{b}, \vec{k_l}, \vec{c}] \ , \ \text{rhs\_tensor}[\vec{b}, \vec{k_r}, \vec{c}] \quad . \]
+\[ \text{lhs\_tensor}[{b}, {k_l}, {c}] \ , \ \text{rhs\_tensor}[{b}, {k_r}, {c}] \quad . \]
 It is worth mentioning that it might be possible to combine all of these operations so far (transposing, reshaping, reducing fourth dimension) into one big one. This will at least save some memory, as now we have three tensors for each operand tensor in memory: The original one which we have to leave untouched, the transposed one, as well as the reduced one. I still decided to implement it this way, as this approach is more modular. Furthermore, I initially implemented a transpose method myself, but I realized that it was the bottleneck of my implementation. Hence, I decided to use an external library for transposing, such that the performance of my implementation is not limited by a poor implemented transposing function.
 
 Of course we can now free both transposed tensors after the reduction operation, which we also do. However, I figured that it might be beneficial to actually keep some memory, preferably from the bigger tensor, in order to later reuse it for the result of the following batch matrix multiplication operation.
 
 \subsubsection{Batch Matrix Multiplication}
-Now we take care of contracting the appropriate dimensions by performing a batch matrix multiplication. Note, though, that the contraction dimensions are the last one in each operand tensor (the third dimension), and hence we actually perform a \em batch matrix matmul transpose \em operation, i.e. we treat the rhs operand batch matrices as being transposed. I chose this implementation, as this way we have a stride of one when multiplying individual matrices of a batch both in the lhs and rhs matrix, with respect to the inner most loop. Consequently, this ensures excellent spatial locality and hence we make perfect use of the cache. The result of this operation will be the three dimensiol tensor \texttt{bmm\_result}, with dimension sizes
+Now we take care of contracting the appropriate dimensions by performing a batch matrix multiplication. Note, though, that the contraction dimensions are the last one in each operand tensor (the third dimension), and hence we actually perform a \em batch matrix matmul transpose \em operation, i.e. we treat the rhs operand batch matrices as being transposed. I chose this implementation, as this way we have a stride of one when multiplying individual matrices of a batch both in the lhs and rhs matrix, with respect to the inner most loop. Consequently, this ensures excellent spatial locality and hence we make perfect use of the cache. The result of this operation will be the three dimensional tensor \texttt{bmm\_result}, with dimension sizes
 \[ \text{bmm\_result} = [b, k_l, k_r] \quad . \]
 As hinted, we might store the result of this operation in previously allocated memory, all provided that the memory region is big enough. Otherwise we do have to allocate new memory. The question whether our available memory is sufficient for the new data depends on on the dimension sizes of the operand tensors and their categorized dimensions: We have
 \begin{align*}
@@ -207,9 +211,9 @@ in case that the lhs tensor is the bigger one of the two (similar if rhs tensor 
 
 
 \subsubsection{Reshaping and Transposing the Result}
-Now, there is only one final step: Bringing \texttt{bmm\_result} in the correct shape specified by the format string. To this end, we have to firstly split the current three dimensions of our result tensor into the individual ones. Hence, we we look at our inital tensors and their column identifiers again to get the dimension sizes.
+Now, there is only one final step: Bringing \texttt{bmm\_result} in the correct shape specified by the format string. To this end, we have to firstly split the current three dimensions of our result tensor into the individual ones. Hence, we we look at our initial tensors and their column identifiers again to get the dimension sizes.
 
-For example, so split the batch dimension, we check the the batch dimensions of \texttt{lhs\_tensor} and store their specific dimension sizes in the same order as they are present in the tensor. We do this, as our \texttt{bmm\_result} tensor has the same ordering of its data with respect to the batch dimension as \texttt{lhs\_tensor}. Note that we specifically transposed \texttt{rhs\_tensor} to match the batch and contraction order of \texttt{lhs\_tensor}.
+For example, to split the batch dimension, we check the the batch dimensions of \texttt{lhs\_tensor} and store their specific dimension sizes in the same order as they are present in the tensor. We do this, as our \texttt{bmm\_result} tensor has the same ordering of its data with respect to the batch dimension as \texttt{lhs\_tensor}. Note that we specifically transposed \texttt{rhs\_tensor} to match the batch and contraction order of \texttt{lhs\_tensor}.
 
 After doing similar for the remaining two dimensions, we reshape our tensor accordingly. Now we have the result tensor as desired, only with potential wrong ordering of the dimensions. Hence, we need a final transposition. But instead of creating a whole new tensor and doing an expensive transpose call, we are very lazy and just return the current tensor as is, only with accordingly altered strides metadata.
 
@@ -227,18 +231,19 @@ print(matrix.strides)
 transposed = np.einsum("ab,c->ba", matrix, np.array([1]))
 print(transposed.strides)
 \end{lstlisting}
+\\\\
 You will likely see that the strides got altered simply.
 
 
 \subsection{Transposition Method}
-Let us now take a closer look at the smaller "puzzle pieces" making up the main \texttt{comput\_einsum} function, starting with the tensor transposition method. As already discussed, I chose to use an external library for this purpose, and hence there is not much to analyze, as we just pass the control flow to the library. It is important to note though that we allocate memory for another tensor each call, as this is necessary for the library call, as well as ensuring that the original tensor stays constant. Hence the constant specifier in the method declaration.
-% TODO: write about how efficient it is, vectoriziation, multi threading etc.
+Let us now take a closer look at the smaller "puzzle pieces" making up the main \texttt{compute\_einsum} function, starting with the tensor transposition method. As already discussed, I chose to use an external library for this purpose, and hence there is not much to analyze, as we just pass the control flow to the library. It is important to note though that we allocate memory for another tensor each call, as this is necessary for the library call, as well as ensuring that the original tensor stays constant. Hence the constant specifier in the method declaration.
+% TODO: write about how efficient it is, vectorization, multi threading etc.
 
 \subsection{Reshaping Method}
-The implementation of this method is very sraight forward. As discussed, when calling this method, we ensure that the tensor has canonical strides, as in this case we only have to change the meta attributes \texttt{ndim} and \texttt{shapes}. There isn't else much to say, this is a simple and fast method which will run in $O(1)$.
+The implementation of this method is fairly simple. As discussed, when calling this method, we ensure that the tensor has canonical strides, as in this case we only have to change the meta attributes \texttt{ndim} and \texttt{shapes}. There isn't else much to say, this is a simple and fast method which will run in $O(1)$.
 
 \subsection{Reduction Method}
-This method is not very generic, as it will only reduce the last dimension of the tensor. By doing so, I kept the implementation simple yet it is sufficient for our computations. At the beginning we have to allocate memory for the resulting tensor. This is the first method we look at which has an impact on performance, thus we should be cautious with implementation choices. Hence, we write the folowing compiler-optimization-friendly code:
+This method is not very generic, as it will only reduce the last dimension of the tensor. By doing so, I kept the implementation simple yet it is sufficient for our computations. At the beginning we have to allocate memory for the resulting tensor. This is the first method we look at which has an impact on performance, thus we should be cautious with implementation choices. Hence, we write the following compiler-optimization-friendly code:
 
 \begin{lstlisting}[language=C++]
 #pragma omp parallel for simd aligned(data: 32) aligned(target_data: 32)
@@ -283,7 +288,7 @@ for (size_t i = 0; i < target_size; i++) {
     target_data[i] = sum;
 }
 \end{lstlisting}
-
+\raggedbottom
 \subsection{Batch Matrix Multiplication}
 Let us now investigate the final sub-function \texttt{batch\_matrix\_matmul\_transpose} found in \texttt{include/}. It is basically very straight forward, also note that we treat the rhs operand batch matrices as transposed, which allows for small strides in the inner most loop. We begin by allocating the memory needed for the output, but before allocating new memory, we check if the available memory we reserved is sufficiently large to hold the new data, and if so use it instead. Next, loop over the batch dimension, loop over the rows of lhs tensor, and loop over the rows of rhs tensor (as it is transposed). We collapse these three loops into one, and inside every iteration, which specifies one entry in the output tensor, we perform an inner product between the two last dimensions of the operand tensors at the specified index. In code it looks like this:
 
@@ -315,7 +320,7 @@ As hinted multiple times, my einsum implementation is not very complete but rath
 
 For the sake of simplicity my implementation only accepts two (multi-dimensional) NumPy arrays of the same data type, and only implements transposition, reduction, and contraction. It is able to return a scalar value though, and there is also a workaround to only passing in one NumPy array: Just pass in \texttt{np.array([1], dtype)} as a second operand, and specify the only dimension as a reduction one. This will have the same effect as only passing in the original tensor, and there is also little overhead, since in my implementation I check whether one operand tensor is a scalar with value \texttt{T(1)}, and if so skip the batch matrix multiplication.
 
-Also, supported data types are limited by those supported by the external transposition library. Hence, integer value are actually not supported. The only supported data types are \texttt{np.float64} and \texttt{np.complex128}.
+Also, supported data types are limited by those supported by the external transposition library. Hence, integer value are actually not supported. The only supported data types are \texttt{np.float32}, \texttt{np.float64}, \texttt{np.complex64}, and \texttt{np.complex128}.
 
 
 \subsection{Possible Improvements}
@@ -327,7 +332,7 @@ There are several Improvements one could make, but the most obvious ones are:
   \item More support for parameters, maybe also tensors of different data types, different operations, etc.
   \item More optimized main method, more heuristics like only transposing when needed, etc.
   \item More optimized sub methods, improving parallelization, vectorization by checking for aligned data, etc.
-  \item Utilize gpu for parallelization.
+  \item Utilize GPU for parallelization.
 \end{itemize}
 
 
@@ -344,10 +349,10 @@ We start by assessing the correctness. Our implementation seems to operate very 
 maximum_relative_discrepancy = np.max(np.abs((result - correct) / correct))
 \end{lstlisting}
 \\\\
-Note that per constraction no entry of \texttt{correct} is zero.
+Note that per construction no entry of \texttt{correct} is zero.
 It turns out that this relative discrepancy stays below a value of approximately \texttt{1e-4}, which is very commendable. One might ask where this error arises, and I my answer to that will be that numerical operations of floating point numbers don't form a mathematical \em field\em . Consequently, the order of operation will have an effect on the final output, and I think that my implementation employs a different order than NumPy's.
 
-Ultimately, however, neither implementanion is exactly correct, and my implementation isn't necessarily worse. In fact, on some test cases it was closer to a hard coded answer, but this doesn't have to mean anything, as these computations will suffer from numerical errors as well. Just to give an example, one can test this by running:
+Ultimately, however, neither implementation is exactly correct, and my implementation isn't necessarily worse. In fact, on some test cases it was closer to a hard coded answer, but this doesn't have to mean anything, as these computations will suffer from numerical errors as well. Just to give an example, one can test this by running:
 
 \begin{lstlisting}[language=Python]
 lhs_vector = np.random.rand(100)
@@ -390,7 +395,7 @@ at different operand scales, and compare both implementations. The results are s
 
 \section{Conclusions}
 \label{sec:conclusions}
-In this paper, I implemented the einsum function from scratch, in order to evaluate the existing NumPy implementanion. Despite the fact that I certainly could have done better, I was pretty satisfied with my work at the end. The fact that my implementation can "keep up" with NumPy's contributed to this. Yet, I couldn't outperform NumPy generally, only in very specific cases. To be honest, that was predictable. Therefore, these findings emphasize the quality of of libraries like NumPy, but they also show that we should be cautious about performance when using these functions for special purposes, like big reduction operations. Based on my results I advise the reader not to use NumPy's einsum implementation for big reduction operations, as this will result in a serious bottleneck. One should hardcode this operation instead, or use a different einsum implementation. For the latter case, one might use the results of this paper as a starting point to build a better einsum implementation.
+In this paper, I implemented the einsum function from scratch, in order to evaluate the existing NumPy implementation. Despite the fact that I certainly could have done better, I was pretty satisfied with my work at the end. The fact that my implementation can "keep up" with NumPy's contributed to this. Yet, I couldn't outperform NumPy generally, only in very specific cases. To be honest, that was predictable. Therefore, these findings emphasize the quality of of libraries like NumPy, but they also show that we should be cautious about performance when using these functions for special purposes, like big reduction operations. Based on my results I advise the reader not to use NumPy's einsum implementation for big reduction operations, as this will result in a serious bottleneck. One should hardcode this operation instead, or use a different einsum implementation. For the latter case, one might use the results of this paper as a starting point to build a better einsum implementation.
 
 
 %%
