Little improvements in the paper

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -158,7 +158,7 @@ At this point, the reader should be familiar how einsum categorizes the dimensio
 \subsection{Parsing the Input}
 Firstly, we need to ensure the inputs are valid. Since we get a generic \texttt{PyObject*} as input, this includes checking if we have three objects: a string, and two NumPy arrays of the same data type. This basic parsing is done in \texttt{src/einspeed.cpp}.
 
-Next, we have to ensure that the tuple \texttt{(std::string, Tensor<T>, Tensor<T>)} is a valid einsum expression. To this end, I implemented \texttt{is\_valid\_einsum\_expression} function found in \texttt{include/compute\_einsum.h}. It checks the following five criteria:
+Next, we have to ensure that the tuple \texttt{(std::string, Tensor<T>, Tensor<T>)} is a valid einsum expression. To this end, I implemented \texttt{is\_valid\_einsum\_expression} function found in \texttt{include/compute\_einsum.h}. It checks the following four criteria:
 
 \begin{enumerate}
   \item Every character in target\_string must be present in either lhs\_string or rhs\_string.
@@ -194,7 +194,7 @@ We start by reducing the fourth dimension of both operand tensors. This is fairl
 \[ \text{lhs\_tensor}[{b}, {k_l}, {c}] \ , \ \text{rhs\_tensor}[{b}, {k_r}, {c}] \quad . \]
 It is worth mentioning that it might be possible to combine all of these operations so far (transposing, reshaping, reducing fourth dimension) into one big one. This will at least save some memory, as now we have three tensors for each operand tensor in memory: The original one which we have to leave untouched, the transposed one, as well as the reduced one. I still decided to implement it this way, as this approach is more modular. Furthermore, I initially implemented a transpose method myself, but I realized that it was the bottleneck of my implementation. Hence, I decided to use an external library for transposing, such that the performance of my implementation is not limited by a poor implemented transposing function.
 
-Of course we can now free both transposed tensors after the reduction operation, which we also do. However, I figured that it might be beneficial to actually keep some memory, preferably from the bigger tensor, in order to later reuse it for the result of the following batch matrix multiplication operation.
+Of course we can now free both transposed tensors after the reduction operation, which we also do. However, I realized that it might be beneficial to actually keep some memory, preferably from the bigger tensor, in order to later reuse it for the result of the following batch matrix multiplication operation.
 
 \subsubsection{Batch Matrix Multiplication}
 Now we take care of contracting the appropriate dimensions by performing a batch matrix multiplication. Note, though, that the contraction dimensions are the last one in each operand tensor (the third dimension), and hence we actually perform a \em batch matrix matmul transpose \em operation, i.e. we treat the rhs operand batch matrices as being transposed. I chose this implementation, as this way we have a stride of one when multiplying individual matrices of a batch both in the lhs and rhs matrix, with respect to the inner most loop. Consequently, this ensures excellent spatial locality and hence we make perfect use of the cache. The result of this operation will be the three dimensional tensor \texttt{bmm\_result}, with dimension sizes
@@ -290,7 +290,7 @@ for (size_t i = 0; i < target_size; i++) {
 \end{lstlisting}
 \raggedbottom
 \subsection{Batch Matrix Multiplication}
-Let us now investigate the final sub-function \texttt{batch\_matrix\_matmul\_transpose} found in \texttt{include/}. It is basically very straight forward, also note that we treat the rhs operand batch matrices as transposed, which allows for small strides in the inner most loop. We begin by allocating the memory needed for the output, but before allocating new memory, we check if the available memory we reserved is sufficiently large to hold the new data, and if so use it instead. Next, loop over the batch dimension, loop over the rows of lhs tensor, and loop over the rows of rhs tensor (as it is transposed). We collapse these three loops into one, and inside every iteration, which specifies one entry in the output tensor, we perform an inner product between the two last dimensions of the operand tensors at the specified index. In code it looks like this:
+Let us now investigate the final sub-function \texttt{batch\_matrix\_matmul\_transpose} found in \texttt{blas.h}. It is basically very straight forward, also note that we treat the rhs operand batch matrices as transposed, which allows for small strides in the inner most loop. We begin by allocating the memory needed for the output, but before allocating new memory, we check if the available memory we reserved is sufficiently large to hold the new data, and if so use it instead. Next, loop over the batch dimension, loop over the rows of lhs tensor, and loop over the rows of rhs tensor (as it is transposed). We collapse these three loops into one, and inside every iteration, which specifies one entry in the output tensor, we perform an inner product between the two last dimensions of the operand tensors at the specified index. In code it looks like this:
 
 \begin{lstlisting}[language=C++]
 #pragma omp parallel for simd aligned(result_data: 32) aligned(lhs_data: 32) aligned(rhs_data: 32) collapse(3)
