Changing acmConference in paper

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -39,7 +39,7 @@
 \settopmatter{printacmref=false} % Removes citation information below abstract
 \renewcommand\footnotetextcopyrightpermission[1]{} % removes footnote with conference information in 
 
-% \acmConference[AEPRO 2025]{AEPRO 2025: Algorithm Engineering Projects}{March 1}{Jena, Germany}
+\acmConference[]{Algorithm Engineering Project}{March 11}{Jena, Germany}
 
 % convert text to title case
 % http://individed.com/code/to-title-case/
